Added bootstrap and its dependencies

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,15 @@
 <!DOCTYPE html>
 	<head>
 		<title>Urban Enigma</title>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.5/umd/popper.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.5/umd/popper-utils.min.js"></script>
+		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap-grid.min.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap-reboot.min.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 	</head>
 
    </head>
@@ -11,6 +20,7 @@
 		    <h1>{{ user|safe }}</h1><br>
 		    <p>Followers: {{ followers|safe }}</p><br>
 		    <p>Following: {{ following|safe }}</p><br> 
+		    <p>Bio: {{ bio }}</p>
 		    <img src="{{ pp }}">
 	    </div>
     </body>
